--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 
 <body>
 <main>
-  <h1>GitHub Pages のサンプルです</h1>
+  <h1>プライバシーポリシー</h1>
   <a href="http://www.tam-tam.co.jp/tipsnote/"><button>TipsNote に戻る</button></a>
 </main>
 
 <script>
-console.log('GitHub Pages Sample');
+1,aaa;
+aaa3aa;
+3fgaga
 </script>
 </body>
 </html>
