--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>プライバシーポリシー</title>
+<title>手取り計算 プライバシーポリシー</title>
 </head>
 
 <body>
 <main>
-  <h1>プライバシーポリシー</h1>
+  <h1>手取り計算 プライバシーポリシー</h1>
   <a href="http://www.tam-tam.co.jp/tipsnote/"><button>TipsNote に戻る</button></a>
 </main>
 
