--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <main>
   <h1>手取り計算 プライバシーポリシー</h1>
 <br>
-<b>データ解析<\b>
+<b>データ解析</b>
   データを解析しています。匿名で個人を特定できないようにしています。ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
 <br>
-<b>免責事項<\b>
+<b>免責事項</b>
 <br>あああ
   
 </main>
