--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>手取り計算 プライバシーポリシー</title>
 </head>
-
 <body>
 <main>
   <h1>手取り計算 プライバシーポリシー</h1>
@@ -14,7 +13,11 @@
 データを解析しています。匿名で個人を特定できないようにしています。ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
 <br>
 <b>免責事項</b>
-<br>あああ
+<br>
+あああ
+<br>
+<b>免責事項2</b>
+<br>
   
 </main>
 </body>
