--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <main>
   <h1>手取り計算 プライバシーポリシー</h1>
 <br>
+<b>個人情報</b>
+<br>
+第三者に個人を特定できる情報を提供することはありません。
+<br>
+<br>
 <b>データ解析</b>
 <br>
 データを解析しています。匿名で個人を特定できないようにしています。ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
