--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <br>
 <b>免責事項</b>
 <br>
-あああ
+利用上の不具合・不都合に対して可能な限りサポートを行っておりますが、利用者が本アプリを利用して生じた損害に関して、開発元は責任を負わないものとします。
 <br>
 <br>
 <b>免責事項2</b>
