--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <br>
 <b>個人情報</b>
 <br>
-第三者に個人を特定できる情報を提供することはありません。
+個人を特定可能な情報は一切収集しておりません。また、第三者に個人を特定できる情報を提供することはありません。
 <br>
 <br>
 <b>データ解析</b>
