--- a/index.html
+++ b/index.html
@@ -8,24 +8,21 @@
 <main>
   <h1>手取り計算 プライバシーポリシー</h1>
 <br>
-<b>個人情報</b>
+<b>・個人情報</b>
 <br>
 個人を特定可能な情報は一切収集しておりません。また、第三者に個人を特定できる情報を提供することはありません。
 <br>
 <br>
-<b>データ解析</b>
-<br>
-データを解析しています。匿名で個人を特定できないようにしています。ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
-<br>
-<br>
-<b>免責事項</b>
+<b>・免責事項</b>
 <br>
 利用上の不具合・不都合に対して可能な限りサポートを行っておりますが、利用者が本アプリを利用して生じた損害に関して、開発元は責任を負わないものとします。
 <br>
 <br>
-<b>免責事項2</b>
+<b>・お問い合わせ</b>
 <br>
-  
+itaru.develop@icloud.com
+<br>
+<br>
 </main>
 </body>
 </html>
