--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <br>
 <b>・個人情報</b>
 <br>
-個人を特定可能な情報は一切収集しておりません。また、第三者に個人を特定できる情報を提供することはありません。
+個人を特定可能な情報は一切収集しておりません。また、利用中に発生するデータについて第三者に情報を提供することはありません。
 <br>
 <br>
 <b>・免責事項</b>
@@ -18,7 +18,7 @@
 利用上の不具合・不都合に対して可能な限りサポートを行っておりますが、利用者が本アプリを利用して生じた損害に関して、開発元は責任を負わないものとします。
 <br>
 <br>
-<b>・お問い合わせ</b>
+<b>・お問い合わせ先</b>
 <br>
 itaru.develop@icloud.com
 <br>
