--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 <br>
 <b>・免責事項</b>
 <br>
-利用上の不具合・不都合に対して可能な限りサポートを行っておりますが、利用者が本アプリを利用して生じた損害に関して、開発元は責任を負わないものとします。
+利用者が本アプリを利用して生じた損害に関して、開発元は責任を負わないものとします。
+<br>
+<br>
+<b>・当プライバシーポリシーについて</b>
+<br>
+当プライバシーポリシーは事前通知無しに更新されることがあります。
 <br>
 <br>
 <b>・お問い合わせ先</b>
